hol up
Took 95 hours 10 minutes